[gd_scene load_steps=5 format=2]

[ext_resource path="res://GFX/titleSplash.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://GFX/skybox.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Prefabs/GameTracker.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 944.0
margin_bottom = 562.0

[node name="title" type="CenterContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 944.0
margin_bottom = 14.0

[node name="gameTitle" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/title"]
margin_left = 434.0
margin_right = 509.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GAME TITLE"

[node name="art" type="CenterContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 944.0
margin_bottom = 538.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/art"]
margin_right = 944.0
margin_bottom = 520.0
texture = ExtResource( 3 )

[node name="GemLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/art"]
margin_left = 433.0
margin_top = 253.0
margin_right = 510.0
margin_bottom = 267.0
text = "Total Gems:"

[node name="levels" type="CenterContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 944.0
margin_bottom = 562.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/levels"]
margin_left = 179.0
margin_right = 765.0
margin_bottom = 20.0

[node name="Level1_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Level 1"

[node name="Level2_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 20.0
text = "Level 2"

[node name="Level3_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 20.0
text = "Level 3"

[node name="Level4_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 186.0
margin_right = 244.0
margin_bottom = 20.0
text = "Level 4"

[node name="Level5_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 248.0
margin_right = 306.0
margin_bottom = 20.0
text = "Level 5"

[node name="Level6_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 310.0
margin_right = 368.0
margin_bottom = 20.0
text = "Level 6"

[node name="Level7_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 372.0
margin_right = 430.0
margin_bottom = 20.0
text = "Level 7"

[node name="Level8_B" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 434.0
margin_right = 492.0
margin_bottom = 20.0
text = "Level 8"

[node name="Reset" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer"]
margin_left = 496.0
margin_right = 586.0
margin_bottom = 20.0
text = "Reset Game"

[node name="GameTracker" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level1_B" to="." method="_on_Level1_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level2_B" to="." method="_on_Level2_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level3_B" to="." method="_on_Level3_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level4_B" to="." method="_on_Level4_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level5_B" to="." method="_on_Level5_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level6_B" to="." method="_on_Level6_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level7_B" to="." method="_on_Level7_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Level8_B" to="." method="_on_Level8_B_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/levels/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
